// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobStepIcon /> renders correct icon when state cancelled 1`] = `
<Icon
  color="red"
  faStyle="fas"
  fixedWidth={true}
  name="ban"
/>
`;

exports[`<JobStepIcon /> renders correct icon when state complete 1`] = `
<Icon
  color="green"
  faStyle="fas"
  fixedWidth={true}
  name="check"
/>
`;

exports[`<JobStepIcon /> renders correct icon when state error 1`] = `
<Icon
  color="red"
  faStyle="fas"
  fixedWidth={true}
  name="times"
/>
`;

exports[`<JobStepIcon /> renders correct icon when state preparing 1`] = `
<Icon
  color="grey"
  faStyle="fas"
  fixedWidth={true}
  name="boxes"
/>
`;

exports[`<JobStepIcon /> renders correct icon when state running 1`] = `
<Step__JobStepLoader
  color="primary"
  size="12px"
/>
`;

exports[`<JobStepIcon /> renders correct icon when state waiting 1`] = `
<Icon
  color="purple"
  faStyle="fas"
  fixedWidth={true}
  name="pause"
/>
`;

exports[`<JobStepIcon /> renders correct icon when step complete 1`] = `
<Icon
  color="blue"
  faStyle="fas"
  fixedWidth={true}
  name="arrow-circle-down"
/>
`;
